<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="TextView"
        android:textSize="72sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:text="Hello World!"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_counter" />

    <Button
        android:id="@+id/button_start_launch_dispatcher_io"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/startLaunchDispatcherIO"
        app:layout_constraintEnd_toEndOf="@+id/textView_log"
        app:layout_constraintStart_toStartOf="@+id/textView_log"
        app:layout_constraintTop_toBottomOf="@+id/textView_log" />

    <Button
        android:id="@+id/button_start_run_blocking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/startRunBlocking"
        app:layout_constraintEnd_toEndOf="@+id/textView_log"
        app:layout_constraintStart_toStartOf="@+id/textView_log"
        app:layout_constraintTop_toBottomOf="@+id/button_start_launch_dispatcher_io" />

    <Button
        android:id="@+id/button_start_async"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/startUsingAsync"
        app:layout_constraintEnd_toEndOf="@+id/textView_log"
        app:layout_constraintStart_toStartOf="@+id/textView_log"
        app:layout_constraintTop_toBottomOf="@+id/button_start_run_blocking" />

    <Button
        android:id="@+id/button_start_with_timeout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/startWithTimeout"
        app:layout_constraintEnd_toEndOf="@+id/textView_log"
        app:layout_constraintStart_toStartOf="@+id/textView_log"
        app:layout_constraintTop_toBottomOf="@+id/button_start_async" />

    <ToggleButton
        android:id="@+id/button_toggle_start_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textOff="@string/toggle_to_start_coroutine"
        android:textOn="@string/toggle_to_cancel_coroutine"
        app:layout_constraintEnd_toEndOf="@+id/textView_log"
        app:layout_constraintStart_toStartOf="@+id/textView_log"
        app:layout_constraintTop_toBottomOf="@+id/button_start_with_timeout" />


</androidx.constraintlayout.widget.ConstraintLayout>